--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "oklm",
   "version": "0.0.1",
   "description": "Un code sain pour un dev serein",
-  "keywords": [
-    "boilerplate",
-    "clean architecture",
-    "CQRS",
-    "event sourcing"
-  ],
+  "keywords": [],
+  "scripts": {
+    "start": "nodemon dist/application/server.js",
+    "watch": "concurrently \"tsc -w\" \"yarn run start\"",
+    "prettier": "prettier --write . --ignore-unknown",
+    "test": "jest",
+    "lint": "eslint -c ./eslintrc.js src"
+  },
   "homepage": "https://github.com/oklmdev/oklm#readme",
   "bugs": {
     "url": "https://github.com/oklmdev/oklm/issues"
@@ -15,14 +17,34 @@
   "license": "MIT",
   "contributors": [
     "Romain Cambonie <romain.cambonie@gmail.com> (https://github.com/romain-cambonie)",
-    "Pierre-Antoine Duchateau <> (https://github.com/paduc)",
+    "Pierre-Antoine Duchateau <pad@dabla.com> (https://github.com/paduc)",
     "Marc Gavanier <marc.gavanier@gmail.com> (https://github.com/marc-gavanier)"
   ],
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/oklmdev/oklm.git"
+    "type": "git",
+    "url": "https://github.com/oklmdev/oklm.git"
   },
   "main": "src/index.ts",
-  "scripts": {},
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@1.22.17",
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "concurrently": "^7.0.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^26.0.0",
+    "express": "^4.17.2",
+    "jest": "^27.4.7",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
+  }
 }
