--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "concurrently \"tsc -w\" \"yarn run start\"",
     "prettier": "prettier --write . --ignore-unknown",
     "test": "jest",
-    "lint": "eslint -c ./eslintrc.js src"
+    "lint": "eslint -c ./eslintrc.js src",
+    "db": "docker-compose down --remove-orphans && docker-compose up -d",
+    "db:test": "export NODE_ENV=test && export COMPOSE_PROJECT_NAME=oklm_tests && docker-compose down --remove-orphans && docker-compose -f ./docker-compose-integration.yml up -d && until docker exec oklm_db_tests pg_isready -U test -d oklm_test; do sleep 1; done"
   },
   "homepage": "https://github.com/oklmdev/oklm#readme",
   "bugs": {
