--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon dist/application/server.js",
     "watch": "concurrently \"tsc -w\" \"yarn run start\"",
     "prettier": "prettier --write . --ignore-unknown",
+    "migrate": "ts-node ./src/migrate.ts",
     "test": "jest",
     "lint": "eslint -c ./eslintrc.js src",
     "db": "docker-compose down --remove-orphans && docker-compose up -d",
@@ -31,12 +32,14 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/pg": "^8.6.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/uuid": "^8.3.4",
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-node": "^10.4.0",
