--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-dom": "^17.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
