--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "bin": "init.js",
   "packageManager": "yarn@1.22.17",
   "dependencies": {
+    "@dataesr/react-dsfr": "^2.3.1",
     "@gouvfr/dsfr": "^1.4.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
