npm run watch works (again!)

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Un code sain pour un dev serein",
   "keywords": [],
   "scripts": {
-    "start": "nodemon dist/application/index.js",
-    "watch": "tsc && concurrently \"tsc -w\" \"yarn run start\"",
+    "start": "nodemon dist/SPACE/index.js",
+    "watch": "tsc && cp -r src/SPACE/assets dist/SPACE && concurrently \"tsc -w\" \"yarn run start\"",
     "prettier": "prettier --write . --ignore-unknown",
-    "migrate": "ts-node ./src/application/migrate.ts",
+    "migrate": "ts-node ./src/SPACE/migrate.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint -c ./eslintrc.js src",
