Réecriture de la page README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oklm",
+  "name": "starter-betagouv",
   "version": "0.0.2",
   "description": "Un code sain pour un dev serein",
   "keywords": [],
