--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,12 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: npm install
+  - init: |
+    yarn
+    yarn db
+    yarn migrate
+  - command: yarn watch
+  
 vscode:
   extensions:
     - dbaeumer.vscode-eslint
