--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,8 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: |
+  - name: Oklm
+    init: |
     yarn
     yarn db
     yarn migrate
