--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "concurrently": "^7.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.2",
     "keycloak-connect": "^17.0.1",
