--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint -c ./eslintrc.js src",
-    "db": "docker-compose down --remove-orphans && docker-compose up -d",
-    "db:test": "export NODE_ENV=test && export COMPOSE_PROJECT_NAME=oklm_tests && docker-compose down --remove-orphans && docker-compose -f ./docker-compose-integration.yml up -d && until docker exec oklm_db_tests pg_isready -U test -d oklm_test; do sleep 1; done && yarn migrate",
+    "db": "docker compose down --remove-orphans && docker compose up -d",
+    "db:test": "export NODE_ENV=test && export COMPOSE_PROJECT_NAME=oklm_tests && docker compose down --remove-orphans && docker compose -f ./docker-compose-integration.yml up -d && until docker exec oklm_db_tests pg_isready -U test -d oklm_test; do sleep 1; done && yarn migrate",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "cypress:open": "cypress open"
@@ -47,7 +47,7 @@
     "concurrently": "^7.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "express-async-handler": "^1.2.0",
+    "express-async-errors": "^3.1.1",
     "express-session": "^1.17.2",
     "keycloak-connect": "^17.0.1",
     "nodemon": "^2.0.15",
