Ajouter --runInBand pour éviter le deadlock sur la db dans les test

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "watch": "tsc && cp -r src/assets dist && concurrently \"tsc -w\" \"yarn run start\"",
     "prettier": "prettier --write . --ignore-unknown",
     "migrate": "ts-node ./src/migrate.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --runInBand",
+    "test:watch": "jest --runInBand --watch",
     "lint": "eslint -c ./eslintrc.js src",
     "db": "docker compose down --remove-orphans && docker compose up -d",
     "db:test": "export NODE_ENV=test && export COMPOSE_PROJECT_NAME=oklm_tests && docker compose down --remove-orphans && docker compose -f ./docker-compose-integration.yml up -d && until docker exec oklm_db_tests pg_isready -U test -d oklm_test; do sleep 1; done && yarn migrate",
