Introduction des bundles navigateur

--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "description": "Démarrer un projet betagouv en toute sérénité",
   "keywords": [],
   "scripts": {
-    "build": "tsc && cp -r src/assets dist",
-    "build-storybook": "build-storybook",
-    "cypress:open": "cypress open",
+    "build": "tsc && cp -r src/assets dist && yarn build:front",
+    "build:front": "webpack --config=webpack.config.js",
+    "start": "node dist/index.js",
+    "watch:front": "webpack --config=webpack.config.js --watch",
+    "watch": "tsc && cp -r src/assets dist && concurrently \"tsc -w\" \"yarn run start\" \"yarn watch:front\"",
+    "migrate": "ts-node ./src/migrate.ts",
+    "test": "jest --runInBand",
+    "test:unit": "jest --testRegex='^(().)*.spec.ts$' --runInBand",
+    "test:watch": "jest --runInBand --watch",
     "db": "docker compose down --remove-orphans && docker compose up -d",
     "db:test": "export NODE_ENV=test && export COMPOSE_PROJECT_NAME=oklm_tests && docker compose down --remove-orphans && docker compose -f ./docker-compose-integration.yml up -d && until docker exec oklm_db_tests pg_isready -U test -d oklm_test; do sleep 1; done && yarn migrate",
     "lint": "eslint --config=./.tooling/.eslint/.eslintrc.cjs  ./src/",
-    "migrate": "ts-node ./src/migrate.ts",
     "prettier": "prettier --config=./.tooling/.prettier/.prettierrc.cjs  --write  ./src/",
     "prettier:check": "prettier --config=./.tooling/.prettier/.prettierrc.cjs --check ./src/",
     "start:dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
+    "cypress:open": "cypress open",
     "storybook": "start-storybook -p 6006",
-    "test:unit": "jest --testRegex='^(().)*.spec.ts$' --runInBand",
-    "test": "jest --runInBand",
-    "test:watch": "jest --runInBand --watch",
-    "watch": "tsc && cp -r src/assets dist && concurrently \"tsc -w\" \"yarn run start\""
+    "build-storybook": "build-storybook"
   },
   "homepage": "https://github.com/oklmdev/starter-betagouv#readme",
   "bugs": {
@@ -41,15 +43,20 @@
   "dependencies": {
     "@dataesr/react-dsfr": "^2.3.1",
     "@gouvfr/dsfr": "^1.4.0",
+    "callsites": "3.1.0",
     "dotenv": "^16.0.0",
+    "esbuild-loader": "^2.19.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.2",
+    "glob": "^8.0.3",
     "keycloak-connect": "^17.0.1",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "uuid": "^8.3.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "zod": "^3.16.0"
   },
   "devDependencies": {
