--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "Un code sain pour un dev serein",
   "keywords": [],
   "scripts": {
-    "start": "nodemon dist/index.js",
-    "watch": "tsc && cp -r src/assets dist && concurrently \"tsc -w\" \"yarn run start\"",
-    "prettier": "prettier --write . --ignore-unknown",
-    "migrate": "ts-node ./src/migrate.ts",
-    "test": "jest --runInBand",
-    "test:watch": "jest --runInBand --watch",
-    "lint": "eslint -c ./eslintrc.js src",
+    "build": "tsc",
+    "build-storybook": "build-storybook",
+    "cypress:open": "cypress open",
     "db": "docker compose down --remove-orphans && docker compose up -d",
     "db:test": "export NODE_ENV=test && export COMPOSE_PROJECT_NAME=oklm_tests && docker compose down --remove-orphans && docker compose -f ./docker-compose-integration.yml up -d && until docker exec oklm_db_tests pg_isready -U test -d oklm_test; do sleep 1; done && yarn migrate",
+    "lint": "eslint --config=./.tooling/.eslint/.eslintrc.cjs  ./src/",
+    "migrate": "ts-node ./src/migrate.ts",
+    "prettier": "prettier --config=./.tooling/.prettier/.prettierrc.cjs  --write  ./src/",
+    "prettier:check": "prettier --config=./.tooling/.prettier/.prettierrc.cjs --check ./src/",
+    "start": "nodemon dist/index.js",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "cypress:open": "cypress open"
+    "test:unit": "jest --testRegex='^(().)*.spec.ts$' --runInBand",
+    "test": "jest --runInBand",
+    "test:watch": "jest --runInBand --watch",
+    "watch": "tsc && cp -r src/assets dist && concurrently \"tsc -w\" \"yarn run start\""
   },
   "homepage": "https://github.com/oklmdev/oklm#readme",
   "bugs": {
@@ -67,15 +70,15 @@
     "@storybook/addon-links": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
     "babel-loader": "^8.2.5",
     "cypress": "^10.3.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^26.0.0",
     "jest": "^27.4.7",
-    "prettier": "^2.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.8.7",
+    "prettier": "^2.7.1",
     "ts-jest": "^27.1.3",
     "yarn": "^1.22.17"
   }
