--- a/.github/workflows/_validation.reusable.yml
+++ b/.github/workflows/_validation.reusable.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        command: [lint, prettier:check, test]
+        command: [lint, "prettier:check", test]
 
     steps:
       - name: Checkout repository
