--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.8.7",
     "prettier": "^2.7.1",
-    "ts-jest": "^27.1.3",
-    "yarn": "^1.22.17"
+    "ts-jest": "^27.1.3"
   }
 }
