ci(cd): fix download extracting build files in root

--- a/.github/workflows/_deploy-application.scalingo.reusable.yml
+++ b/.github/workflows/_deploy-application.scalingo.reusable.yml
@@ -60,9 +60,12 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build-bundle
+          path: dist
+
 
       # Current artifact structure
-      # /dist
+      # |  - index.js => application entrypoint
+      # | [...] => built files and folders
 
       # Target release structure:
       # /app
