--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Démarrer un projet betagouv en toute sérénité",
   "keywords": [],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r src/assets dist",
     "build-storybook": "build-storybook",
     "cypress:open": "cypress open",
     "db": "docker compose down --remove-orphans && docker compose up -d",
@@ -13,7 +13,8 @@
     "migrate": "ts-node ./src/migrate.ts",
     "prettier": "prettier --config=./.tooling/.prettier/.prettierrc.cjs  --write  ./src/",
     "prettier:check": "prettier --config=./.tooling/.prettier/.prettierrc.cjs --check ./src/",
-    "start": "nodemon dist/index.js",
+    "start:dev": "nodemon dist/index.js",
+    "start": "node dist/index.js",
     "storybook": "start-storybook -p 6006",
     "test:unit": "jest --testRegex='^(().)*.spec.ts$' --runInBand",
     "test": "jest --runInBand",
@@ -40,6 +41,18 @@
   "dependencies": {
     "@dataesr/react-dsfr": "^2.3.1",
     "@gouvfr/dsfr": "^1.4.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
+    "express-session": "^1.17.2",
+    "keycloak-connect": "^17.0.1",
+    "pg": "^8.7.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2",
+    "zod": "^3.16.0"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.0",
@@ -47,22 +60,6 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/uuid": "^8.3.4",
-    "concurrently": "^7.0.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "express-async-errors": "^3.1.1",
-    "express-session": "^1.17.2",
-    "keycloak-connect": "^17.0.1",
-    "nodemon": "^2.0.15",
-    "pg": "^8.7.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5",
-    "uuid": "^8.3.2",
-    "zod": "^3.16.0"
-  },
-  "devDependencies": {
     "@babel/core": "^7.17.10",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -71,6 +68,7 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
+    "concurrently": "^7.0.0",
     "cypress": "^10.3.0",
     "jest": "^27.4.7",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
@@ -78,7 +76,10 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.8.7",
+    "nodemon": "^2.0.15",
     "prettier": "^2.7.1",
-    "ts-jest": "^27.1.3"
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
