--- a/.github/workflows/_deploy-application.scalingo.reusable.yml
+++ b/.github/workflows/_deploy-application.scalingo.reusable.yml
@@ -6,10 +6,14 @@ on:
       application-name:
         required: true
         type: string
-      scalingo-remote-domain-url:
+      scalingo-remote-git-url:
         required: false
         type: string
         default: "git@ssh.osc-fr1.scalingo.com"
+      scalingo-deployed-domain-url:
+        required: false
+        type: string
+        default: ".osc-fr1.scalingo.io"
       scalingo-ssh-host-domain:
         required: false
         type: string
@@ -18,6 +22,9 @@ on:
     secrets:
       SCALINGO_API_TOKEN:
         required: true
+
+    outputs:
+      deploy-success: ${{ jobs.deploy-to-target-environment.outputs.deploy-success }}
 
 jobs:
   create-app-and-environment:
@@ -55,6 +62,8 @@ jobs:
   deploy-to-target-environment:
     runs-on: ubuntu-latest
     needs: create-app-and-environment
+    outputs:
+      deploy-success: ${{ steps.deploy.outputs.deploy-success }}
     steps:
       - name: Extract back & database artifacts
         uses: actions/download-artifact@v3
@@ -124,8 +133,16 @@ jobs:
 
       # TODO Find a way to check on deploy result
       - name: Deploy - Push to deploy
+        id: deploy
         run: |
-          git push scalingo -f
+          OUTPUT_AS_MULTILINE=$(git push scalingo -f)
+          OUTPUT_AS_HYBRID="${OUTPUT_AS_MULTILINE//'%'/'%25'}"
+          OUTPUT_AS_HYBRID="${OUTPUT_AS_HYBRID//$'\n'/'%0A'}"
+          OUTPUT_AS_SINGLELINE="${OUTPUT_AS_HYBRID//$'\r'/'%0D'}"
+          set +e
+          echo "::set-output name=deploy-success::$(OUTPUT_AS_SINGLELINE | grep -c https://${{ inputs.application-name }}${{ inputs.scalingo-deployed-domain-url }} )"
+          set -e
+
 
   cleanup-deploy-keys:
     needs: deploy-to-target-environment
