--- a/.github/workflows/_deploy-application.scalingo.reusable.yml
+++ b/.github/workflows/_deploy-application.scalingo.reusable.yml
@@ -106,7 +106,7 @@ jobs:
               "react": "^17.0.2",
               "react-dom": "^17.0.2",
               "uuid": "^8.3.2",
-              "zod": "^3.16.0"
+              "zod": "^3.16.0",
             }
           }
           EOF
