--- a/.github/workflows/_deploy-application.scalingo.reusable.yml
+++ b/.github/workflows/_deploy-application.scalingo.reusable.yml
@@ -64,8 +64,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build-bundle
-          path: dist
-
 
       # Current artifact structure
       # |  - index.js => application entrypoint
@@ -77,36 +75,6 @@ jobs:
       # | | - index.js => application entrypoint
       # | | [...] => built files and folders
       # | package.json => contains start script & minimal dependencies
-
-      # TODO Find an elegant way to get dependencies (jq or another job ?)
-      - name: Release - Generate minimalist package.json to start server express
-        run: |
-          touch package.json
-          CONTENT=$(cat << EOF
-          {
-            "name": "starter",
-            "version": "1.0.0",
-            "scripts": {
-               "start": "node dist/index.js"
-            },
-            "dependencies": {
-              "@dataesr/react-dsfr": "^2.3.1",
-              "@gouvfr/dsfr": "^1.4.0",
-              "dotenv": "^16.0.0",
-              "express": "^4.17.2",
-              "express-async-errors": "^3.1.1",
-              "express-session": "^1.17.2",
-              "keycloak-connect": "^17.0.1",
-              "pg": "^8.7.3",
-              "react": "^17.0.2",
-              "react-dom": "^17.0.2",
-              "uuid": "^8.3.2",
-              "zod": "^3.16.0"
-            }
-          }
-          EOF
-          )
-          echo "$CONTENT" >> package.json
 
       - name: Release - Initialise a local git repository for deployment (a scalingo deployment is a push to their remote)
         run: |
@@ -133,9 +101,9 @@ jobs:
           OUTPUT_AS_HYBRID="${OUTPUT_AS_HYBRID//$'\n'/'%0A'}"
           OUTPUT_AS_SINGLELINE="${OUTPUT_AS_HYBRID//$'\r'/'%0D'}"
           set +e
-          $HAS_DEPLOY_URL=$($OUTPUT_AS_SINGLELINE | grep -c https://${{ inputs.application-name }}${{ inputs.scalingo-deployed-domain-url }})
+          $HAS_ERROR=$($OUTPUT_AS_SINGLELINE | grep -c 'Error deploying the application' }})
           set -e
-          if [[ $HAS_DEPLOY_URL -eq 0 ]]; then exit 1; fi
+          if [[ $HAS_ERROR -eq 1 ]]; then exit 1; fi
 
 
   cleanup-deploy-keys:
