ci(deploy): trim application name to the scalingo limit of 47 characters

--- a/.github/workflows/deploy.scalingo.use-case.yml
+++ b/.github/workflows/deploy.scalingo.use-case.yml
@@ -70,6 +70,12 @@ jobs:
             package.json
             dist
 
+      # Current artifact / release structure
+      # - package.json => buildpack entrypoint (script 'start')
+      # /dist
+      # | - index.js => application entrypoint
+      # | [...] => built files and folders
+
   validation:
     needs:
       - dynamic-variables
