--- a/.github/workflows/_deploy-application.scalingo.reusable.yml
+++ b/.github/workflows/_deploy-application.scalingo.reusable.yml
@@ -37,9 +37,10 @@ jobs:
       - name: Create the application with its specific environment if it does not exist (trimmed to the scalingo limit of 47 characters)
         run: |
           set +e
-          APP_ALREADY_EXIST=$(scalingo apps | grep -c ${{ inputs.application-name }})
+          APP_TRIMMED=$(${{ inputs.application-name }} | grep -Eo '^.{47}')
+          APP_ALREADY_EXIST=$(scalingo apps | grep -c $APP_TRIMMED }})
           set -e
-          if [[ $APP_ALREADY_EXIST -eq 0 ]]; then scalingo create ${{ inputs.application-name }}; else echo 'App exists already or has an invalid name'; fi
+          if [[ $APP_ALREADY_EXIST -eq 0 ]]; then scalingo create $APP_TRIMMED; else echo 'App exists already or has an invalid name'; fi
 
       - name: Generate transient ssh-keys then add the public key to the logged account for deployment
         run: |
@@ -65,18 +66,7 @@ jobs:
         with:
           name: build-bundle
 
-      # Current artifact structure
-      # |  - index.js => application entrypoint
-      # | [...] => built files and folders
-
-      # Target release structure:
-      # /app
-      # | /dist
-      # | | - index.js => application entrypoint
-      # | | [...] => built files and folders
-      # | package.json => contains start script & minimal dependencies
-
-      - name: Release - Initialise a local git repository for deployment (a scalingo deployment is a push to their remote)
+      - name: Initialise a local git repository for deployment (a scalingo deployment is a push to their remote)
         run: |
           rm -rf .git
           git config --global init.defaultBranch master
