--- a/package.json
+++ b/package.json
@@ -48,18 +48,13 @@
     "glob": "^8.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "6.0.0",
     "uuid": "^8.3.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "zod": "^3.16.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/uuid": "^8.3.4",
     "@babel/core": "^7.17.10",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -67,14 +62,20 @@
     "@storybook/addon-links": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.2.5",
-    "concurrently": "^7.0.0",
-    "jest": "^27.4.7",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "babel-loader": "^8.2.5",
+    "concurrently": "^7.0.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.8.7",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "^2.7.1",
     "ts-jest": "^27.1.3",
